# rk2

./: .gitignore  CMakeLists.txt  README.md  chain-of-responsibility_1.0.0_amd64.deb
.github/workflows/: ci.yml
include/: chain.hpp
scripts/: build_and_test.sh
src/: main.cpp
tests/: test_chain.cpp
